Created elements dinamically

--- a/index-START.html
+++ b/index-START.html
@@ -8,12 +8,12 @@
   <body>
     <h1 class="title">Corona App</h1>
     <ul class="summary-global">
-      <li class="global__box global__box--newconfirmed"></li>
+      <!-- <li class="global__box global__box--newconfirmed"></li>
       <li class="global__box global__box--newdeaths"></li>
       <li class="global__box global__box--newrecovered"></li>
       <li class="global__box global__box--totalconfirmed"></li>
       <li class="global__box global__box--totaldeaths"></li>
-      <li class="global__box global__box--totalrecovered"></li>
+      <li class="global__box global__box--totalrecovered"></li> -->
     </ul>
     <script src="script.js"></script>
   </body>
