Created Sass Variables

--- a/index-START.html
+++ b/index-START.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Corona App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Corona App</h1>
-    <ul class="summary-global">
-      <!-- <li class="global__box global__box--newconfirmed"></li>
-      <li class="global__box global__box--newdeaths"></li>
-      <li class="global__box global__box--newrecovered"></li>
-      <li class="global__box global__box--totalconfirmed"></li>
-      <li class="global__box global__box--totaldeaths"></li>
-      <li class="global__box global__box--totalrecovered"></li> -->
-    </ul>
+    <h1 class="app-title">Corona App</h1>
+    <ul class="summary-global"></ul>
     <script src="script.js"></script>
   </body>
 </html>
