--- a/index-START.html
+++ b/index-START.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <h1 class="app-title">Corona App</h1>
-    <ul class="summary-global"></ul>
-    <footer>Corona Virus App - 2020</footer>
+    <div class="content">
+      <ul class="summary-global"></ul>
+    </div>
+    <footer>&copy; Corona Virus App - 2020</footer>
     <script src="script.js"></script>
   </body>
 </html>
