Added dynamic year

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="content">
       <ul class="summary-global"></ul>
     </div>
-    <footer>&copy; Corona Virus App - 2020</footer>
+    <footer>&copy; Corona Virus App - <span class="year"></span></footer>
     <script src="script.js"></script>
   </body>
 </html>
