--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <div class="content">
       <ul class="summary-global"></ul>
     </div>
-    <footer>&copy; Corona Virus App - <span class="year"></span></footer>
+    <footer title="Made by TSD">
+      <span class="copy">&copy; </span>Corona Virus App -
+      <span class="year"></span> - Made by
+      <a class="link" href="http://stefantut.dev" target="_blank" rel="noopener"
+        >TSD</a
+      >
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
